# ESPN-Polymarket-API

./: .gitignore  CONTRIBUTING.md  LICENSE-MIT  README.md
.github/workflows/: canary.yml  corpus.yml
bindings/js/: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
bindings/python/: README.md  pyproject.toml
bindings/python/examples/: usage.py
bindings/python/src/espn_polymarket_map/: __init__.py  client.py  crosswalk.py  data.py  datecalc.py  models.py  normalize.py  parse.py  resolve.py  slug.py
bindings/python/src/espn_polymarket_map/_data/crosswalk/: athlete.json  bundesliga.json  laliga.json  mls.json  seriea.json  wnba.json
bindings/python/tests/: test_corpus.py  test_unit.py
canary/: classify.mjs  run.mjs
canary/dashboard/: index.html  status.json
core-rs/: Cargo.toml
core-rs/examples/: map_today.rs
core-rs/src/: client.rs  crosswalk.rs  data.rs  datecalc.rs  lib.rs  models.rs  normalize.rs  parse.rs  resolve.rs  slug.rs
core-rs/tests/: corpus.rs
corpus/: README.md
corpus/cases/: bundesliga-three-way-bayern-code.json  cbb-two-way.json  cfb-two-way.json  epl-three-way-null-type.json  laliga-three-way-real-madrid.json  ligue1-three-way.json  mlb-two-way-fullname-moneyline.json  mls-three-way.json  nba-two-way-nickname-index.json  nfl-two-way-moneyline.json  nhl-two-way-vgk-las-code.json  seriea-three-way.json  soccer-cape-verde-cabo-alias.json  soccer-congo-dr-word-order.json  soccer-curacao-kor-trap.json  soccer-south-korea-kr-code.json  soccer-three-way-away-favorite.json  soccer-three-way-date-rollover.json  tennis-two-way-lastname.json  ucl-three-way.json  ufc-two-way-fighters.json  wnba-two-way-moneyline-suffix.json
data/: slug-templates.json
data/crosswalk/: cbb.json  cfb.json  ligue1.json  nfl.json  nhl.json  soccer.json  ucl.json
data/schema/: crosswalk.schema.json  slug-templates.schema.json
docs/: adding-a-team-mapping.md  architecture.md
scripts/: canary-followup.mjs  crosswalk-overrides.json  seed-crosswalk.mjs  sync-data.mjs  validate-data.mjs
scripts/espn-teams/: bundesliga.json  cbb.json  cfb.json  epl.json  fifa.world.json  laliga.json  ligue1.json  mlb.json  mls.json  nba.json  (+4 more)
(+18 files in other folders)
