[package]
name = "espn-polymarket-map"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
description = "Canonical, continuously-verified crosswalk between ESPN sports entities and Polymarket markets."
repository = "https://github.com/Swofty-Developments/ESPN-Polymarket-API"
homepage = "https://github.com/Swofty-Developments/ESPN-Polymarket-API"
documentation = "https://docs.rs/espn-polymarket-map"
readme = "README.md"
keywords = ["polymarket", "espn", "sports", "prediction-markets", "crosswalk"]
categories = ["api-bindings", "data-structures"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-normalization = "0.1"
ureq = { version = "2", optional = true }

[features]
default = ["client"]
# `client` enables the blocking HTTP clients for ESPN + Polymarket (pulls in ureq).
client = ["dep:ureq"]

[[example]]
name = "map_today"
required-features = ["client"]
