[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "espn-polymarket-map"
version = "0.1.0"
description = "Canonical ESPN <-> Polymarket market mapping (Python binding)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Swofty Developments" }]
keywords = ["espn", "polymarket", "sports", "betting", "crosswalk"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Swofty-Developments/ESPN-Polymarket-API"
Repository = "https://github.com/Swofty-Developments/ESPN-Polymarket-API"

[project.optional-dependencies]
test = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/espn_polymarket_map"]

[tool.hatch.build.targets.wheel.force-include]
"src/espn_polymarket_map/_data" = "espn_polymarket_map/_data"

[tool.hatch.build.targets.sdist]
include = ["src/espn_polymarket_map", "tests", "examples", "README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
